- Convert streams to for-loop (because... well... jsonarray.toList returns array with hashmaps) - Fix typos - Color dg not loaded notif - Add bouncycastel provider on preinit
Signed-off-by: syeyoung <cyoung06@naver.com>